--- a/pub.html
+++ b/pub.html
@@ -35,7 +35,7 @@
                     </span>
                     <span class='main'>
                         <span class='text' style='transform: scaleX(-1);'>
-                            Research!
+                            Research
                         </span>
                         <span class='the-arrow -right'>
                             <span class='shaft'></span>
@@ -51,7 +51,7 @@
                     </span>
                     <span class='main'>
                         <span class='text'>
-                           Team!
+                           Team
                         </span>
                         <span class='the-arrow -right'>
                             <span class='shaft'></span>
@@ -232,6 +232,7 @@
             $('.menu-button').click(function () {
                 console.log('nob')
                 $('#nav-icon4').toggleClass('open');
+                $('#nav-icon4 span').toggleClass('change-nav');
                 $('.menu').toggleClass('scale');
                 $('.collapse').fadeToggle(50);
             });
