--- a/team.html
+++ b/team.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
 
-    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC" rel="stylesheet">
@@ -34,7 +34,7 @@
                     </span>
                     <span class='main'>
                         <span class='text' style='transform: scaleX(-1);'>
-                            Publication!
+                            Publication
                         </span>
                         <span class='the-arrow -right'>
                             <span class='shaft'></span>
@@ -50,7 +50,7 @@
                     </span>
                     <span class='main'>
                         <span class='text'>
-                            Home!
+                            Home
                         </span>
                         <span class='the-arrow -right'>
                             <span class='shaft'></span>
@@ -162,7 +162,18 @@
                             <img class="rounded-circle img-fluid d-block mx-auto" src="images/Group.JPG" alt="">
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
-                            <p class='team-p'>December 2014: (L to R) Tamara, Alejandra, Nakita, Lyann, Warren, Bryan, Hirak, Soheil</p>
+                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren,
+                                Laura, Aj, Nathan, Hirak, You. </p>
+                        </div>
+
+                    </div>
+                    <div class="col-md-12">
+                        <div id='group' class="col-lg-12 col-md-12 col-xs-12 text-center mb-4 member" style='color:white'>
+                            <img class="rounded-circle img-fluid d-block mx-auto" src="images/group 2014.jpeg" alt="">
+
+                            <p class='about' style='margin-top:1em'> Group Photos </p>
+                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren,
+                                Laura, Aj, Nathan, Hirak, You. </p>
                         </div>
 
                     </div>
@@ -187,7 +198,10 @@
                                     </h3>
                                     <p class='about'> Principal Investigator</p>
 
-                                    <p class='team-p'></p>
+                                    <p class='team-p'>Warren has been leading a glycobiology team since 1994. His expertise is in carbohydrate
+                                        active enzymes, especially their structure and function. His team has been developing
+                                        enzymes for the synthesis of bioactive molecules in vitro and in vivo. When not directing
+                                        the team he can found cooking or playing guitar. </p>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-3'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Nakita 1.jpg" alt="">
@@ -226,7 +240,7 @@
                                         an expression host for a variety of proteins of interest to the Wakarchuk lab. She
                                         is helping to develop new expression vectors for this work.</p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-6'>
+                                <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-6'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/You 1.JPG" alt="">
                                     <h3 class='header team-name'>
                                         Dr. You Wang
@@ -236,7 +250,7 @@
                                     <p class='team-p'>You is working on therapeutic protein glycan remodelling, by creating new versions of
                                         the glycosyltransferases
                                     </p>
-                                </div>
+                                </div> -->
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-7'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Hirak 1.png" alt="">
                                     <h3 class='header team-name'>
@@ -353,9 +367,44 @@
                         </div>
                     </div>
 
+                    <div id='gallery' class="col-lg-12 col-md-12 col-xs-12 text-center" style='color:white'>
+                        <div class="header">
+                            <h1 id='alumni' style='margin-bottom:1em;'>Lab Events</h1>
+                        </div>
+                        <div class="img-text">
+                            <h1>Click To View</h1>
+                        </div>
+                        <a data-fancybox="gallery" href="images/Events/Wakarchuk lab party 2018.jpg" data-caption="Wakarchuk lab party 2018">
+                            <img src="images/Events/Wakarchuk lab party 2018.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Fasrah at OBD 2017.jpg" data-caption="Fasrah at OBD 2017">
+                            <img src="images/Events/Fasrah at OBD 2017.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Hirak 2015.jpg" data-caption="Hirak 2015">
+                            <img src="images/Events/Hirak 2015.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Lets not forget the socks.jpg" data-caption="Lets not forget the socks">
+                            <img src="images/Events/Lets not forget the socks.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Nakita 2015 presentation.jpg" data-caption="Nakita 2015 presentation">
+                            <img src="images/Events/Nakita 2015 presentation.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Sadia at GlycoNet 2018.jpg" data-caption="Sadia at GlycoNet 2018">
+                            <img src="images/Events/Sadia at GlycoNet 2018.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Soheil 2014.jpg" data-caption="Soheil 2014">
+                            <img src="images/Events/Soheil 2014.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Tasnim 2015 presentation.jpg" data-caption="Tasnim 2015 presentation">
+                            <img src="images/Events/Tasnim 2015 presentation.jpg">
+                        </a>
+                        <a data-fancybox="gallery" href="images/Events/Warren and sialic acid 2016.jpg" data-caption="Warren and sialic acid 2016">
+                            <img src="images/Events/Warren and sialic acid 2016.jpg">
+                        </a>
+
+                    </div>
 
                 </div>
-            </div>
 
 
 
@@ -378,11 +427,20 @@
 
 
     <script src="js/jquery-1.7.min.js"></script>
-    <script src="js/Three49custom.js"></script>
-    <script type="text/javascript" src="js/GLmol.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+
     <script>
         $(window).on('load', function () {
             $('#group').css('color', 'white').fadeIn();
+            $('#gallery img, #gallery .img-text').on('mouseover', function () {
+                if ($('.img-text h1').css('color') != 'white') {
+                    $('.img-text h1').toggleClass('scale2');
+                }
+
+            });
+            $('#gallery img, #gallery .img-text').on('mouseleave', function () {
+                $('.img-text h1').toggleClass('scale2');
+            });
 
         })
         $(window).scroll(function () {
@@ -436,6 +494,8 @@
             $('.menu-button').click(function () {
                 console.log('nob')
                 $('#nav-icon4').toggleClass('open');
+                $('#nav-icon4 span').toggleClass('change-nav');
+                
                 $('.menu').toggleClass('scale');
                 $('.collapse').fadeToggle(50);
             });
