--- a/team.html
+++ b/team.html
@@ -386,8 +386,8 @@
                         <a data-fancybox="gallery" href="images/Events/Lets not forget the socks.jpg" data-caption="Lets not forget the socks">
                             <img src="images/Events/Lets not forget the socks.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Nakita 2015 presentation.jpg" data-caption="Nakita 2015 presentation">
-                            <img src="images/Events/Nakita 2015 presentation.jpg">
+                        <a data-fancybox="gallery" href="images/Events/Nakita 2015 presentation.JPG" data-caption="Nakita 2015 presentation">
+                            <img src="images/Events/Nakita 2015 presentation.JPG">
                         </a>
                         <a data-fancybox="gallery" href="images/Events/Sadia at GlycoNet 2018.jpg" data-caption="Sadia at GlycoNet 2018">
                             <img src="images/Events/Sadia at GlycoNet 2018.jpg">
@@ -395,8 +395,8 @@
                         <a data-fancybox="gallery" href="images/Events/Soheil 2014.jpg" data-caption="Soheil 2014">
                             <img src="images/Events/Soheil 2014.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/Tasnim 2015 presentation.jpg" data-caption="Tasnim 2015 presentation">
-                            <img src="images/Events/Tasnim 2015 presentation.jpg">
+                        <a data-fancybox="gallery" href="images/Events/Tasnim 2015 presentation.JPG" data-caption="Tasnim 2015 presentation">
+                            <img src="images/Events/Tasnim 2015 presentation.JPG">
                         </a>
                         <a data-fancybox="gallery" href="images/Events/Warren and sialic acid 2016.jpg" data-caption="Warren and sialic acid 2016">
                             <img src="images/Events/Warren and sialic acid 2016.jpg">
