--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </p>
 
                     <p style='padding-bottom:5em'>
-                        e have a toolbox for this research that includes: recombinant protein expression and engineering; glycosyltransferase expertise
+                        We have a toolbox for this research that includes: recombinant protein expression and engineering; glycosyltransferase expertise
                         for the
                         <span style='font-style:italic'>in vitro</span> and
                         <span style='font-style:italic'>in vivo</span> synthesis of glycoconjugates; HPLC based analytical methods; basic carbohydrate chemistry
