--- a/team.html
+++ b/team.html
@@ -64,9 +64,9 @@
     </div>
     <div class="header" style='letter-spacing: .2em;'>
         <h3>
-            Wakarchuk Lab
+                The Wakarchuk Lab for GlycoScience
         </h3>
-        <h1>glycobiology LAB</h1>
+        <h1>glycobiology lab</h1>
     </div>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
