--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="header" style='letter-spacing: .2em;'>
         <h3>
-            Wakarchuk Lab
+                The Wakarchuk Lab for GlycoScience
         </h3>
         <h1>glycobiology LAB</h1>
     </div>
