--- a/research.html
+++ b/research.html
@@ -72,7 +72,7 @@
     </div>
     <div class="header" style='letter-spacing: .2em;'>
         <h3>
-                The Wakarchuk Lab for GlycoScience
+            The Wakarchuk Lab for GlycoScience
         </h3>
         <h1>why Glycobiology?</h1>
     </div>
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="col-md-3 offset-md-0">
                                     <p style='font-size:1.7rem;'> This image shows the stages in producing two proteins. And following the shift up the
-                                        gel which shows the addition of this modification. This modification keepstherapeutic
+                                        gel which shows the addition of this modification. This modification keeps therapeutic
                                         proteins in the blood longer, so they keep doing their job!</p>
                                 </div>
 
@@ -231,7 +231,7 @@
                         <h1 style='margin-top:1em;color:#ea4235'>Synthetic biology and its application for Glycobiology?</h1>
                     </div>
 
-                    <p style='font-size:1.7rem; padding-bottom:10em'>
+                    <p style='font-size:1.7rem'>
                         We have been working on improving therapeutic proteins through their glycosylation. We have been engineering
                         <span style='font-style:italic'>in vivo</span> protein glycosylation through improving landing sites for glycosyltransferases. Our
                         work includes synthetic operons to add biosynthetic pathways for glycosylation in host organisms.
@@ -243,6 +243,57 @@
                         <strong>glycoproteomics</strong> to address this complex problem in the hope we can uncover
                         <strnog>fundamental knowledge of this glycosylation process.</strnog>
                     </p>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 col-sm-12" style='margin-top:0rem; text-align:left'>
+                                <div class="header">
+                                    <h3>Wakarchuk Lab Funding</h3>
+                                </div>
+                                <p style='font-size:1.7rem; '>
+                                    <p style='font-size:1.7rem;'>
+                                        - Currently the lab holds funding from
+                                        <a style='color:black;border-bottom:1px solid black' href='http://canadianglycomics.ca/'>GlycoNet Projects</a> TP-1, TP-2, and TP-27
+                                    </p>
+                                    <p style='font-size:1.7rem;'>
+                                        - The lab is also funded by an
+                                        <strong> NSERC </strong> Discovery Grant
+                                    </p>
+                                    <p style='font-size:1.7rem;'>
+                                        -
+                                        <a style='color:black;border-bottom:1px solid black' href="https://grants.uberresearch.com/501100000038/485099/Understanding-bacterical-protein-mannosylation">
+                                            UberResearch Grant </a>
+                                    </p>
+
+                                </p>
+                            </div>
+                            <div class="col-md-6 col-sm-12" style='margin-top:0rem; text-align:center'>
+                                <div class="header">
+                                    <h3>Useful GlycoScience links </h3>
+                                </div>
+                                <p style='font-size:1.7rem;'>
+                                    -
+                                    <a style='color:black;border-bottom:1px solid black' target='_blank' href='http://www.cazy.org/Welcome-to-the-Carbohydrate-Active.html'>
+                                        Cazy.org</a>
+                                </p>
+                                <p style='font-size:1.7rem;'>
+                                    -
+                                    <a style='color:black;border-bottom:1px solid black' target='_blank' href='https://www.cazypedia.org/index.php/CAZypedia%3AAbout'>
+                                        Cazypedia.org </a>
+
+
+                                </p>
+                                <p style='font-size:1.7rem; padding-bottom:7em'>
+                                    -
+                                    <a style='color:black;border-bottom:1px solid black' target='_blank' href='http://glycoenzymes.ccrc.uga.edu/'>
+                                        Glycoenzymes </a>
+
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
 
 
                 </div>
@@ -261,7 +312,7 @@
                 console.log('nob')
                 $('#nav-icon4').toggleClass('open');
                 $('#nav-icon4 span').toggleClass('change-nav');
-                
+
                 $('.menu').toggleClass('scale');
                 $('.collapse').fadeToggle(50);
             });
