--- a/team.html
+++ b/team.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="col-md-12">
                         <div id='group' class="col-lg-12 col-md-12 col-xs-12 text-center mb-4 member" style='color:white'>
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="images/group 2014.jpeg" alt="">
+                            <img class="rounded-circle img-fluid d-block mx-auto" src="images/group 2014.jpg" alt="">
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
                             <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren,
