--- a/team.html
+++ b/team.html
@@ -167,16 +167,7 @@
                         </div>
 
                     </div>
-                    <div class="col-md-12">
-                        <div id='group' class="col-lg-12 col-md-12 col-xs-12 text-center mb-4 member" style='color:white'>
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="images/group 2014.jpg" alt="">
-
-                            <p class='about' style='margin-top:1em'> Group Photos </p>
-                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren,
-                                Laura, Aj, Nathan, Hirak, You. </p>
-                        </div>
-
-                    </div>
+                   
 
                     <div class="col-md-12">
                         <div class="header">
@@ -401,7 +392,10 @@
                         <a data-fancybox="gallery" href="images/Events/Warren and sialic acid 2016.jpg" data-caption="Warren and sialic acid 2016">
                             <img src="images/Events/Warren and sialic acid 2016.jpg">
                         </a>
-
+                        <a data-fancybox="gallery" href="images/Events/group 2014.jpg" data-caption="group 2014">
+                            <img src="images/Events/group 2014.jpg">
+                        </a>
+                      
                     </div>
 
                 </div>
