--- a/team.html
+++ b/team.html
@@ -392,8 +392,8 @@
                         <a data-fancybox="gallery" href="images/Events/Warren and sialic acid 2016.jpg" data-caption="Warren and sialic acid 2016">
                             <img src="images/Events/Warren and sialic acid 2016.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/group 2014.jpg" data-caption="group 2014">
-                            <img src="images/Events/group 2014.jpg">
+                        <a data-fancybox="gallery" href="images/Events/group 2014.jpeg" data-caption="group 2014">
+                            <img src="images/Events/group 2014.jpeg">
                         </a>
                       
                     </div>
