--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="col-md-4 col-xs-12">
                             <h4>CONTACT</h4>
                             <div class="contact"> 350 Victoria Street, Toronto, Ontario, Canada M5B 2K3</div>
-                            <p class='contact'>(647-824-2995)</p>
+                            <p class='contact'>(416-979-5000 x3207)</p>
 
                         </div>
                         <div class="col-md-4 col-xs-12">
