--- a/research.html
+++ b/research.html
@@ -282,6 +282,10 @@
 
 
                                 </p>
+                                <p style="font-size:1.7rem;"><div itemscope="" itemtype="https://schema.org/Person" style="color: black;">- <a itemprop="sameAs" content="https://orcid.org/0000-0002-1539-1679" href="https://orcid.org/0000-0002-1539-1679" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top; color:black; border-bottom:1px solid black">Orcid.org</a></div>
+
+
+                                </p>
                                 <p style='font-size:1.7rem; padding-bottom:7em'>
                                     -
                                     <a style='color:black;border-bottom:1px solid black' target='_blank' href='http://glycoenzymes.ccrc.uga.edu/'>
