--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="css/style.css">
+    
 
 
     <style>
@@ -57,8 +58,10 @@
     </div>
     <div class="header" style='letter-spacing: .2em;'>
         <h3>
-                The Wakarchuk Lab for GlycoScience
+                The Wakarchuk Lab for GlycoSciences 
         </h3>
+        <br>
+        <h4>The Wakarchuk lab is an inclusive and welcoming community </h4> 
         <h1>glycobiology LAB</h1>
     </div>
 
