--- a/team.html
+++ b/team.html
@@ -162,7 +162,7 @@
                             <img class="rounded-circle img-fluid d-block mx-auto" src="images/Group.JPG" alt="">
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
-                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren,
+                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia (link to AntonescuLab <a style='color:black; border-bottom:1px solid black' href='http://antonesculab.com/index.html' target='_blank'> here</a>), Ting, Ray, Nakita, Bettina, Tasnim, Warren,
                                 Laura, Aj, Nathan, Hirak, You. </p>
                         </div>
 
@@ -205,7 +205,7 @@
                                         in enzymatic synthesis, master of protein expression and purification. Nakita has
                                         a passion for teaching and has trained many of the Wakarchuk lab undergrad alumni!</p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-4'>
+                                <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-4'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Laura 1.jpg" alt="">
 
                                     <h3 class='header team-name'>
@@ -216,7 +216,7 @@
                                         her expertise to the OGO project, where we are making therapeutic proteins with O-glycans,
                                         as well the PST project where we are improving polysialyltransferases for tissue
                                         engineering and therapeutic protein modification</p>
-                                </div>
+                                </div> -->
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-5'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/AJ 1.jpg" alt="">
                                     <h3 class='header team-name'>
