--- a/team.html
+++ b/team.html
@@ -72,8 +72,8 @@
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
         <div class="container" style='margin-bottom:5vh'>
 
-            <button id='button-collapse' class="navbar-toggler navbar-toggler-right" type="button" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <button id='button-collapse' class="navbar-toggler navbar-toggler-right" type="button" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <!-- <div class="menu">
                             <span> MENU </span>
                         </div> -->
@@ -162,7 +162,9 @@
                             <img class="rounded-circle img-fluid d-block mx-auto" src="images/Group.JPG" alt="">
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
-                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia (link to AntonescuLab <a style='color:black; border-bottom:1px solid black' href='http://antonesculab.com/index.html' target='_blank'> here</a>), Ting, Ray, Nakita, Bettina, Tasnim, Warren,
+                            <p class='team-p'>March 2018: (L to R starting at the front) Sadia (link to AntonescuLab <a
+                                    style='color:black; border-bottom:1px solid black' href='http://antonesculab.com/index.html'
+                                    target='_blank'> here</a>), Ting, Ray, Nakita, Bettina, Tasnim, Warren,
                                 Laura, Aj, Nathan, Hirak, You. </p>
                         </div>
 
@@ -189,9 +191,12 @@
                                     </h3>
                                     <p class='about'> Principal Investigator</p>
 
-                                    <p class='team-p'>Warren has been leading a glycobiology team since 1994. His expertise is in carbohydrate
-                                        active enzymes, especially their structure and function. His team has been developing
-                                        enzymes for the synthesis of bioactive molecules in vitro and in vivo. When not directing
+                                    <p class='team-p'>Warren has been leading a glycobiology team since 1994. His
+                                        expertise is in carbohydrate
+                                        active enzymes, especially their structure and function. His team has been
+                                        developing
+                                        enzymes for the synthesis of bioactive molecules in vitro and in vivo. When not
+                                        directing
                                         the team he can found cooking or playing guitar. </p>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-3'>
@@ -201,9 +206,12 @@
                                     </h3>
                                     <p class='about'> Lab Manager</p>
 
-                                    <p class='team-p'>Nakita divides her time among all the projects in the Wakarchuk lab. She is an expert
-                                        in enzymatic synthesis, master of protein expression and purification. Nakita has
-                                        a passion for teaching and has trained many of the Wakarchuk lab undergrad alumni!</p>
+                                    <p class='team-p'>Nakita divides her time among all the projects in the Wakarchuk
+                                        lab. She is an expert
+                                        in enzymatic synthesis, master of protein expression and purification. Nakita
+                                        has
+                                        a passion for teaching and has trained many of the Wakarchuk lab undergrad
+                                        alumni!</p>
                                 </div>
                                 <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-4'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Laura 1.jpg" alt="">
@@ -227,8 +235,10 @@
 
 
                                     </h2>
-                                    <p class='team-p'>Aj has been applying her microbiology expertise to using Corynebacterium glutamicum as
-                                        an expression host for a variety of proteins of interest to the Wakarchuk lab. She
+                                    <p class='team-p'>Aj has been applying her microbiology expertise to using
+                                        Corynebacterium glutamicum as
+                                        an expression host for a variety of proteins of interest to the Wakarchuk lab.
+                                        She
                                         is helping to develop new expression vectors for this work.</p>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-6'>
@@ -241,8 +251,10 @@
 
 
                                     </h2>
-                                    <p class='team-p'>Nicole is recent graduate of Waterloo University. She is working on enzymatic modification
-                                        of glycopeptides, as well as characterizing the protein glycosylation performed by
+                                    <p class='team-p'>Nicole is recent graduate of Waterloo University. She is working
+                                        on enzymatic modification
+                                        of glycopeptides, as well as characterizing the protein glycosylation performed
+                                        by
                                         the synthetic OGO operons in E. coli. </p>
                                 </div>
                                 <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member" id='member-6'>
@@ -263,10 +275,14 @@
                                     </h3>
                                     <p class='about'> PhD Candidate </p>
 
-                                    <p class='team-p'>Hirak has taken on a lead role in unravelling the O-mannosylation in Actinobacteria.
-                                        He is applying synthetic biology to studying the biochemistry of this process in
-                                        the hope of working out if this modification is coupled to protein export, and if
-                                        there is a communication component to the story. He has also been working on the
+                                    <p class='team-p'>Hirak has taken on a lead role in unravelling the O-mannosylation
+                                        in Actinobacteria.
+                                        He is applying synthetic biology to studying the biochemistry of this process
+                                        in
+                                        the hope of working out if this modification is coupled to protein export, and
+                                        if
+                                        there is a communication component to the story. He has also been working on
+                                        the
                                         in vitro remodelling of therapeutic protein glycans.
                                     </p>
                                 </div>
@@ -277,8 +293,10 @@
                                     </h3>
                                     <p class='about'>MSc Candidate </p>
 
-                                    <p class='team-p'>Tasnim is working between the Wakarchuk and Koivisto labs. Her chemical biology expertise
-                                        is being applied to making fluorescent probes for enzyme studies as well as binding
+                                    <p class='team-p'>Tasnim is working between the Wakarchuk and Koivisto labs. Her
+                                        chemical biology expertise
+                                        is being applied to making fluorescent probes for enzyme studies as well as
+                                        binding
                                         protein discovery and characterization.
                                     </p>
                                 </div>
@@ -289,9 +307,12 @@
                                     </h3>
                                     <p class='about'>MSc Candidate </p>
 
-                                    <p class='team-p'>Sadia is working between the Wakarchuk and Antonescu labs (link to Antonescu lab here).
-                                        Sadia’s cell biology expertise is being applied to functional studies of recombinant
-                                        therapeutic proteins from the OGO project, as well studying how the O-GlcNAc modification
+                                    <p class='team-p'>Sadia is working between the Wakarchuk and Antonescu labs (link
+                                        to Antonescu lab here).
+                                        Sadia’s cell biology expertise is being applied to functional studies of
+                                        recombinant
+                                        therapeutic proteins from the OGO project, as well studying how the O-GlcNAc
+                                        modification
                                         is playing a role in regulation of clathrin mediated endocytosis.
                                     </p>
                                 </div>
@@ -313,6 +334,9 @@
                         </div>
                         <div class="container" style='color:black' id='writing'>
                             <div class="row">
+                                <div class="col-md-3 col-xs-3">
+                                    <p class='team-p'> Laura Kell MSc (MSc Candidate 2018) </p>
+                                </div>
                                 <div class="col-md-3 col-xs-3">
                                     <p class='team-p'> Biprajit Sanyal BSc (MSc Candidate 2018) </p>
                                 </div>
@@ -344,7 +368,8 @@
                                     <p class='team-p'> Mahrin Aziz (COOP student 2015)</p>
                                 </div>
                                 <div class="col-md-3 col-xs-3">
-                                    <p class='team-p'> Alejandra Culebro (Visiting PhD student, University of Helsinki, Dec 2014-Feb 2015)
+                                    <p class='team-p'> Alejandra Culebro (Visiting PhD student, University of Helsinki,
+                                        Dec 2014-Feb 2015)
                                     </p>
                                 </div>
                                 <div class="col-md-3 col-xs-3">
