--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </h3>
         <br>
         <h4>The Wakarchuk lab is an inclusive and welcoming community </h4> 
-        <h1>glycobiology LAB</h1>
+        <h1>Glycobiology Lab</h1>
     </div>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
