--- a/research.html
+++ b/research.html
@@ -74,7 +74,7 @@
         <h3>
             The Wakarchuk Lab for GlycoScience
         </h3>
-        <h1>why Glycobiology?</h1>
+        <h1>Why Glycobiology?</h1>
     </div>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="mainNav">
@@ -228,7 +228,7 @@
 
                     </p>
                     <div class="header">
-                        <h1 style='margin-top:1em;color:#ea4235'>Synthetic biology and its application for Glycobiology?</h1>
+                        <h1 style='margin-top:1em;color:#ea4235'>Synthetic Biology and its Application for Glycobiology?</h1>
                     </div>
 
                     <p style='font-size:1.7rem'>
